# numereng

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  SUPPORT.md  TODO.md  justfile  pyproject.toml
.agents/skills/: .gitignore
.agents/skills/experiment-design/: SKILL.md
.agents/skills/numerai-api-ops/: SKILL.md
.agents/skills/numerai-model-implementation/: SKILL.md
.agents/skills/numerai-model-upload/: SKILL.md
.agents/skills/numereng-experiment-ops/: SKILL.md
.agents/skills/store-ops/: SKILL.md
.codex/: config.toml
.codex/agents/: numerai-mcp.toml
.codex/skills/: .gitignore
.codex/skills/implement-custom-model/: SKILL.md
.codex/skills/numerai-api-ops/: SKILL.md
.codex/skills/numereng-experiment-ops/: SKILL.md
.codex/skills/research-memory/: SKILL.md
.codex/skills/store-ops/: SKILL.md
.devcontainer/: devcontainer.json
.factory/: memories.md
.factory/droids/: planner.md  reviewer.md
.factory/hooks/: check-contract-freshness.py  format-and-validate.sh  load-context.sh  stop-if-unverified.py
.factory/rules/: architecture.md  observability.md  python.md  security.md  testing.md
.factory/skills/experiment-contracts/: SKILL.md
.factory/skills/incident-triage/: SKILL.md
.factory/skills/release-check/: SKILL.md
.factory/skills/telemetry-triage/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_fallback.yml  support_question.yml
.github/workflows/: ci.yml  contracts-freshness.yml  readiness.yml  release.yml  security.yml
.project/adr/: 2026-05-28-agentic-research-controller-enforcement.md  2026-05-31-agentic-research-confirmation-comparand.md  2026-05-31-agentic-research-ensemble-action.md  2026-06-01-agentic-research-prompt-context-bound.md
docker/: Dockerfile.sagemaker  Dockerfile.sagemaker-lgbm-cuda
docs/: ARCHITECTURE.md  llms.txt
docs/numerai/: .gitignore  SYNC_POLICY.md
docs/numerai/numerai-crypto/: submissions.md
docs/numerai/numerai-signals/: signals-overview.md  submissions.md
docs/numerai/numerai-tournament/: mcp.md  staking.md
docs/numereng/: README.md  SUMMARY.md
docs/numereng/concepts/: features.md  targets-scoring.md  validation.md
docs/numereng/getting-started/: first-model.md  installation.md  project-layout.md
docs/numereng/reference/: cli.md  configuration.md  custom-models.md  metrics.md  presets.md  python-api.md  runtime-artifacts.md
docs/numereng/workflows/: agentic-research.md  baselines.md  cloud-training.md  dashboard.md  dataset-tools.md  ensembles.md  experiments.md  numerai-ops.md  optimization.md  remote-ops.md  serving.md  store-ops.md  submission.md  training.md
docs/project/: public-repo-boundary.md
docs/project/runbooks/: agentic-research-failures.md  cloud-run-recovery.md  local-training-failures.md  release-publish-checklist.md  serve-release-gate.md  viz-monitoring.md
experiments/2026-04-09_medium-lgbm-gpu-ender20-hpo/: EXPERIMENT.md  experiment.json  run_plan.csv
experiments/2026-04-09_medium-lgbm-gpu-ender20-hpo/configs/: base.json  hpo_study_v1.json
experiments/2026-04-09_medium-lgbm-gpu-ender20-hpo/run_scripts/: launch_all.py  launch_hpo.ps1  run_hpo.ps1
experiments/2026-04-11_lgbm-live-submission-handoff/: EXPERIMENT.md  experiment.json  run_plan.csv  submission_handoff.json
experiments/2026-04-11_lgbm-live-submission-handoff/configs/: r1_medium_target_alpha_20_seed42_full_history_refit.json  r1_medium_target_charlie_20_seed43_full_history_refit.json  r1_small_target_alpha_20_seed42_full_history_refit.json  r1_small_target_jasper_60_seed42_full_history_refit.json
experiments/2026-04-11_lgbm-live-submission-handoff/run_scripts/: blend_live_predictions.py  launch_all.py
runbooks/: agentic-research-failures.md  local-training-failures.md
scripts/: hpo_v2_smoke.sh  release_smoke_install.sh  sync_packaged_assets.sh  viz-start.sh  viz-stop.sh
src/numereng/: CLAUDE.md  __init__.py
src/numereng/api/: __init__.py  _agentic_research.py  _baseline.py  _contracts.py  _contracts_base.py  _contracts_monitor.py  _contracts_ops.py  _contracts_remote.py  _contracts_serving.py  _contracts_viz.py  _dataset_tools.py  _docs.py  _ensemble.py  _experiment.py  _hpo.py  _lazy_exports.py  _monitor.py  _neutralization.py  _pipeline.py  _remote.py  _run.py  _serving.py  _store.py  _submissions.py  _viz.py  _workspace.py  contracts.py  dataset_tools.py  experiment.py  factories.py  health.py  numerai.py  pipeline.py  run.py
src/numereng/assets/: __init__.py
src/numereng/cli/: __init__.py  __main__.py  common.py  main.py  usage.py
src/numereng/config/: __init__.py  settings.py
src/numereng/features/: __init__.py  docs_sync.py
src/numereng/platform/: __init__.py  docs_sync.py  errors.py  export_numerai_mcp_auth.py  forum_scraper.py  numerai_client.py  parquet.py  run_execution.py
tests/: run_lifecycle_smoke.py
tests/e2e/: test_serving_wheel_install.py
tests/integration/: test_hpo_ensemble_slow.py  test_hpo_ensemble_smoke.py  test_serving_smoke.py  test_smoke_structure.py  test_training_ram_efficiency.py
tests/unit/: test_run_lifecycle_smoke.py
tests/unit/numereng/: test_agentic_research.py  test_agentic_research_aggregate.py  test_agentic_research_contract.py  test_agentic_research_hardening.py  test_agentic_research_program_core.py  test_agentic_research_rebuild.py  test_api.py  test_api_hpo_ensemble.py  test_api_imports.py  test_api_neutralization.py  test_api_serving.py  test_api_submissions.py  test_cli.py  test_cli_serving.py  test_feature_neutralization.py  test_numerai_api_ops_skill.py  test_packaged_assets.py  test_scoring_attach_fnc_features.py
tmp/: forum_state.json
viz/: .gitignore  CLAUDE.md  PLOTS.md  README.md  __init__.py  api.py
viz/api/numereng_viz/: __init__.py  app.py  contracts.py  (+5 more)
viz/docs/: ARCHITECTURE.md  llms.txt
viz/web/: .gitignore  package.json  svelte.config.js  vite.config.ts
(+645 files in other folders)
