[project]
name = "numereng"
version = "0.1.0"
description = "Numerai workflow package for training, experiments, submissions, ensembles, HPO, cloud runs, and monitoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.115",
    "numba>=0.61",
    "numpy>=2.0",
    "numerapi>=2.19",
    "pandas>=2.2",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[project.urls]
Repository = "https://github.com/dshap474/numereng"
Issues = "https://github.com/dshap474/numereng/issues"
Documentation = "https://github.com/dshap474/numereng/tree/main/docs"

[project.optional-dependencies]
dev = [
    "catboost>=1.2",
    "httpx>=0.28",
    "interpret>=0.6",
    "imodels>=2.0",
    "lightgbm>=4.0",
    "ngboost>=0.5",
    "numerai-tools>=0.5.3",
    "optuna>=4.0",
    "pandas-stubs>=2.2",
    "pyarrow>=15.0",
    "pytorch-tabnet>=4.1",
    "pytest>=8.0",
    "quantile-forest>=1.4",
    "ruff>=0.6",
    "scikit-learn>=1.8",
    "scipy>=1.12",
    "tabpfn>=2.0",
    "torch>=2.7",
    "ty>=0.0.24",
    "xgboost>=2.1",
]
training = [
    "catboost>=1.2",
    "interpret>=0.6",
    "imodels>=2.0",
    "lightgbm>=4.0",
    "ngboost>=0.5",
    "numerai-tools>=0.5.3",
    "optuna>=4.0",
    "pyarrow>=15.0",
    "pytorch-tabnet>=4.1",
    "quantile-forest>=1.4",
    "scikit-learn>=1.8",
    "tabpfn>=2.0",
    "torch>=2.7",
    "xgboost>=2.1",
]
mlops = [
    "mlflow>=2.17",
]

[project.scripts]
numereng = "numereng.cli:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/numereng"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --tb=short"
markers = [
    "integration: Integration smoke tests for cross-boundary behavior",
    "e2e: End-to-end behavior tests",
    "slow: Long-running tests excluded from fast test gates",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".agents", ".venv-test"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.src]
include = [
    "src/numereng/config",
    "src/numereng/platform",
    "src/numereng/features/submission",
    "src/numereng/api/contracts.py",
    "src/numereng/api/pipeline.py",
    "src/numereng/api/_health.py",
    "tests/unit/numereng/config/test_training.py",
    "tests/unit/numereng/features/submission",
    "tests/integration/test_smoke_structure.py",
]

[[tool.mypy.overrides]]
module = [
    "imodels",
    "imodels.*",
    "pytorch_tabnet",
    "pytorch_tabnet.*",
    "quantile_forest",
    "quantile_forest.*",
    "tabpfn",
    "tabpfn.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true
