[project]
name = "numereng"
version = "0.1.0"
description = "Local-first Numerai workspace repo for training, experiments, submissions, ensembles, HPO, cloud runs, and monitoring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.36",
    "cloudpickle>=3.1",
    "fastapi>=0.138.0",
    "lightgbm>=4.0",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "numerapi>=2.23.2",
    "numerai-tools>=0.6.0",
    "pandas>=2.2",
    "pydantic>=2.13.4",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "uvicorn>=0.49.0",
]

[project.urls]
Repository = "https://github.com/dshap474/numereng"
Issues = "https://github.com/dshap474/numereng/issues"
Documentation = "https://github.com/dshap474/numereng/tree/main/docs"

[project.optional-dependencies]
dev = [
    "catboost>=1.2",
    "deptry>=0.23",
    "httpx>=0.28",
    "import-linter>=2.12",
    "interpret>=0.6",
    "imodels>=2.0",
    "lightgbm>=4.0",
    "ngboost>=0.5.10",
    "numerai-tools>=0.6.0",
    "optuna>=4.9.0",
    "pandas-stubs>=3.0.3.260530",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pyarrow>=24.0.0",
    "pytorch-tabnet>=4.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.0",
    "quantile-forest>=1.4.2",
    "ruff>=0.15.19",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "tabpfn>=8.0.8",
    "torch>=2.12.1",
    "ty>=0.0.52",
    "xgboost>=3.3.0",
]
training = [
    "catboost>=1.2",
    "interpret>=0.6",
    "imodels>=2.0",
    "lightgbm>=4.0",
    "ngboost>=0.5.10",
    "numerai-tools>=0.6.0",
    "optuna>=4.9.0",
    "pyarrow>=24.0.0",
    "pytorch-tabnet>=4.1",
    "quantile-forest>=1.4.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "tabpfn>=8.0.8",
    "torch>=2.12.1",
    "xgboost>=3.3.0",
]
mlops = [
    "mlflow>=3.11.1",
]

[project.scripts]
numereng = "numereng.cli:main"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".codex/**",
    "docs/numerai/**",
    "src/numereng/platform/remotes/profiles/*.yaml",
    "src/numereng/platform/remotes/profiles/*.yml",
    "vendor/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/numereng", "viz/api/numereng_viz"]
exclude = [
    "src/numereng/features/scoring/docs/**",
    "src/numereng/features/models/CLAUDE.md",
    "src/numereng/features/models/CUSTOM_MODELS.md",
    "src/numereng/features/models/custom_models/_OVERVIEW.md",
    "src/numereng/features/models/custom_models/model-implements.md",
    "src/numereng/features/models/custom_models/note.md",
    "src/numereng/platform/remotes/profiles/*.yaml",
    "src/numereng/platform/remotes/profiles/*.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --tb=short --import-mode=importlib"
markers = [
    "integration: Integration smoke tests for cross-boundary behavior",
    "e2e: End-to-end behavior tests",
    "slow: Long-running tests excluded from fast test gates",
]

[tool.coverage.run]
branch = true
source = ["numereng", "numereng_viz"]

[tool.coverage.report]
fail_under = 60
skip_covered = true
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".agents", ".venv-test"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = [
    "src/numereng/config",
    "src/numereng/platform",
    "src/numereng/features/telemetry",
    "src/numereng/features/submission",
    "src/numereng/features/serving",
    "src/numereng/api/contracts.py",
    "src/numereng/api/_serving",
    "src/numereng/api/pipeline.py",
    "src/numereng/api/_health.py",
    "tests/unit/numereng/config/test_training.py",
    "tests/unit/numereng/platform",
    "tests/unit/numereng/features/submission",
    "tests/unit/numereng/features/telemetry",
    "tests/integration/test_smoke_structure.py",
]

[tool.deptry]
extend_exclude = [
    "\\.agents",
    "\\.factory",
    "docs",
    "runbooks",
]
ignore = ["DEP001", "DEP003", "DEP004"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "catboost",
    "deptry",
    "httpx",
    "import-linter",
    "interpret",
    "imodels",
    "ngboost",
    "pandas-stubs",
    "pip-audit",
    "pre-commit",
    "pytest-cov",
    "pytorch-tabnet",
    "quantile-forest",
    "ruff",
    "scikit-learn",
    "tabpfn",
    "torch",
    "ty",
    "uvicorn",
    "xgboost",
]

[[tool.mypy.overrides]]
module = [
    "imodels",
    "imodels.*",
    "pytorch_tabnet",
    "pytorch_tabnet.*",
    "quantile_forest",
    "quantile_forest.*",
    "tabpfn",
    "tabpfn.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true
